--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "liveServer.settings.port": 1234
+    "liveServer.settings.port": 1234,
+    "liveServer.settings.donotShowInfoMessage": true,
 }
