--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+    "deno.enable": true,
+    "deno.lint": true,
+    "deno.unstable": true,
     "liveServer.settings.port": 1234,
     "liveServer.settings.donotShowInfoMessage": true,
 }
