--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
         {
         "format": "expanded",
         "extensionName": ".css",
-        "savePath": "./docs/"
+        "savePath": "/"
     }
     ]
 }
